# ksp-autorv

./: .gitignore  Makefile  pyproject.toml  requirements.txt
krpc_rendezvous/: __init__.py  atmospheric_ascent.py  launch_window.py  orbital_rendezvous.py
krpc_rendezvous/common/: __init__.py  config.py  dashboard.py  flight_monitor.py  krpc_connection.py  orbit_utils.py  pid.py
tests/: __init__.py  conftest.py  test_config.py  test_dashboard.py  test_flight_monitor.py  test_krpc_connection.py  test_launch_window.py  test_launch_window_e2e.py  test_live_krpc.py  test_orbit_utils.py  test_pid.py  test_vehicle_control.py
